@@ -18,5 +18,6 @@ Rake::RDocTask.new(:rdoc) do |rdoc|
   rdoc.title    = 'QueryStats'
   rdoc.options << '--line-numbers' << '--inline-source'
   rdoc.rdoc_files.include('README')
+  rdoc.rdoc_files.include('CHANGELOG')
   rdoc.rdoc_files.include('lib/**/*.rb')
 end
